--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "media-center",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -23,12 +24,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/query-sync-storage-persister": "^5.17.10",
     "@tanstack/react-query": "^5.17.9",
     "@tanstack/react-query-persist-client": "^5.17.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "hls.js": "^1.5.0",
+    "idb": "^8.0.0",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
     "react": "^18",
@@ -50,5 +53,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vercel": "^33.1.0"
+  },
+  "engines": {
+    "node": ">20"
   }
 }
