--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/chromecast-caf-sender": "^1.0.8",
     "@tanstack/react-query-devtools": "^5.20.5",
     "@types/node": "^20",
     "@types/react": "^18",
