--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
-    "sharp": "^0.33.2",
+    "sharp": "0.33.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
