--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hls.js": "^1.5.0",
     "idb": "^8.0.0",
     "lucide-react": "^0.307.0",
+    "megajs": "^1.1.7",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
